# Monkey-Compiler

./: .clang-format  .clang-tidy-backup  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  m_run.sh  m_test.sh  setup.sh
src/: ast.cpp  ast.hpp  builtins.cpp  builtins.hpp  common.hpp  evaluator.cpp  evaluator.hpp  helpers.cpp  helpers.hpp  lexer.cpp  lexer.hpp  main.cpp  object.cpp  object.hpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  token.cpp  token.hpp  whattotest.cpp
test/: ast_test.cpp  evaluator_test.cpp  parser_test.cpp  tests.cpp
